libxfont (1:1.4.1-1) UNRELEASED; urgency=low

  * New upstream release.
  * Bump xutils-dev build-dep for new util-macros.

 -- Julien Cristau <jcristau@debian.org>  Tue, 01 Dec 2009 22:22:35 +0100

libxfont (1:1.4.0-3) unstable; urgency=low

  * libxfont1 Conflicts: xprint (< 2:1.6.0-1). 
    The requiem release of xprint (1.6) will not conflict with
    libxfont1. I am assured the garlic wreaths should prove most
    efficacious at protecting the general public from the undead. 
  * Standards version 3.8.3.

 -- Drew Parsons <dparsons@debian.org>  Sat, 31 Oct 2009 11:29:34 +1100

libxfont (1:1.4.0-2) unstable; urgency=high

  * libxfont1 Conflicts with xprint, printer font support was removed upstream
    in 1.4.0 (closes: #535952).
  * Add README.source from xsfbs.  Bump Standards-Version to 3.8.2.

 -- Julien Cristau <jcristau@debian.org>  Sun, 02 Aug 2009 13:36:46 +0200

libxfont (1:1.4.0-1) unstable; urgency=low

  * New upstream release.
  * Move libxfont1-dbg to new section 'debug'.

 -- Julien Cristau <jcristau@debian.org>  Mon, 13 Apr 2009 12:11:23 +0100

libxfont (1:1.3.4-2) unstable; urgency=low

  * Update debian/copyright from upstream COPYING.
  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Mon, 16 Feb 2009 19:31:59 +0100

libxfont (1:1.3.4-1) experimental; urgency=low

  * Wrap build-deps in debian/control.
  * Run autoreconf on build; build-dep on xutils-dev, autoconf, automake and
    libtool.
  * Handle parallel builds.
  * New upstream release.
  * Drop obsolete x11proto-fontcache-dev build-dependency.

 -- Julien Cristau <jcristau@debian.org>  Tue, 23 Dec 2008 15:06:37 +0100

libxfont (1:1.3.3-1) unstable; urgency=high

  [ Julien Cristau ]
  * Drop dependency on x11-common from libxfont1{,-dbg}.
  * New upstream bugfix release.
  * Disable the type1 rasterizer and support for speedo font files.  The
    former is a security hazard, and Speedo fonts are disabled in the X server
    since before etch anyway.